--- a/task1/index.css
+++ b/task1/index.css
@@ -56,7 +56,7 @@ body{
     height: auto;
     background-color: var(--prussian-blue);
     border: 2px solid white;
-    border-radius: 5%;
+    border-radius: 20px 5px 20px;
     box-shadow: 5px;
     color: var(--text-color-light);
 }
