--- a/task2/index.css
+++ b/task2/index.css
@@ -30,17 +30,15 @@ body{
     display: block;
 }
 
-.head-text{
+.main-head-text{
     color: var(--text-color-light);
     margin-top: 50px;
+    padding: 0px 50px;
 }
 
-.container .head-text{
-    margin: 20px;
-}
-
-.card .head-text{
+.card-head-text{
     margin: 25px;
+    padding: 0px 25px;
 }
 
 .center{
@@ -56,7 +54,7 @@ body{
     height: auto;
     background-color: var(--prussian-blue);
     border: 2px solid white;
-    border-radius: 20px 5px 20px;
+    border-radius: 20px 20px;
     color: var(--text-color-light);
 }
 
