--- a/task2/index.css
+++ b/task2/index.css
@@ -126,7 +126,9 @@ body{
     background-color: var(--teal);
 }
 
-
+.input-error{
+    outline: 2px solid red;
+}
 
 @media only screen and (max-width: 720px) {
    
