--- a/task3/index.css
+++ b/task3/index.css
@@ -12,7 +12,7 @@
 }
 
 .text-highlight{
-    color: var(--text-theme-color);
+    color: var(--text-theme-color) !important;
     /* color: white; */
     text-transform: capitalize;
     font-weight: 600;
@@ -193,4 +193,13 @@
 
 #about-us .quote{
     font-size: 3rem;
+}
+
+footer .row{
+    align-items: center;
+}
+
+footer .col-md-4{
+    text-align: right;
+    font-size: 2rem;
 }
