--- a/task3/index.css
+++ b/task3/index.css
@@ -57,16 +57,20 @@
 
 .hero{
     height: auto;
-    /* background-color: red; */
 }
 
 .hero .row{
-    height: 581px;
     background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2));
 }
 
+.hero .col-md-7{
+    padding-top: 50px;
+    padding-bottom: 70px;
+}
 
 .hero .col-md-5{
+    max-width: 100%;
+    /* height: 500px; */
     background-image: url(./assets/images/hero-1.webp);
     background-size: cover;
     background-position: center;
@@ -74,7 +78,6 @@
 
 .hero-text{
     color: var(--text-color-dark);
-    margin-top: 100px;
     margin-inline: 30px;
 }
 
@@ -203,3 +206,14 @@ footer .col-md-4{
     text-align: right;
     font-size: 2rem;
 }
+
+@media only screen and (max-width: 780px) {
+    footer div.col-md-4, div.col-md-8{
+        padding: 10px;
+        text-align: center;
+    }
+
+    .hero .col-md-5{
+        height: 500px;
+    }
+  }
